--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: var(--Azul-TB);
 }
 
 :root {
   --Azul-TB: #3f7de8;
+  --Branco: #fff;
+}
+
+html, body {
+  font-family: 'Nunito', sans-serif;
+}
+
+h4 {
+  font-weight: 500;
 }
