--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,102 @@
 :root {
   --Azul-TB: #3f7de8;
   --Branco: #fff;
+  --background-color: rgb(235, 235, 235);
 }
 
 html, body {
   font-family: 'Nunito', sans-serif;
 }
 
+body {
+  height: 100vh;
+  background-color: var(--background-color);
+}
+
+.livechat {
+  background-color: var(--Branco);
+  position: absolute;
+  right: 2em;
+  bottom: 2em;
+  width: 75%;
+  max-width: 400px;
+  border-radius: 5px;
+  box-shadow: 14px 14px 38px rgba( 0, 0, 0, 0.08);
+  
+
+}
+
+.livechat .header {
+  background-color: var(--Azul-TB);
+  padding: 0.6em;
+  display: flex;
+  color: var(--Branco);
+  border-top-left-radius:  5px;
+  border-top-right-radius: 5px;
+  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 40%);
+}
+
+.livechat .header .container-header-img {
+  width: 35px;
+  height: 35px;
+  margin-left: 0.5em;
+  margin-right: 1rem;
+  border-radius: 100%;
+}
+
+.livechat .header .container-header-img img {
+  width: 100%;
+  border-radius: 100%;
+}
+
+.container .container-bubble {
+  background-color: var(--Azul-TB);
+  width: 4em;
+  height: 4em;
+  position: absolute;
+  bottom: 2em;
+  right: 2em;
+  border-radius: 50%;
+}
+
+.container-bubble .bubble {  
+  width: 4em;
+  cursor: pointer;
+}
+
 h4 {
   font-weight: 500;
+  font-size: 17px;
+}
+
+.txt-container p {
+  font-size: 11px;
+}
+
+.content .chat {
+  padding: 16px 50px 10px 30px;
+  height: 300px;
+  overflow-y: scroll;
+}
+
+
+.send-container {
+  display: grid;
+  grid-template-columns: 80% auto;
+  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%);
+  margin-top: 1em;  
+  height: 57px;
+}
+
+.send-container input[type="text"] {
+  padding: 1em;
+  border: 1px;
+  border-bottom-left-radius:  5px;
+}
+
+.send-container input[type="submit"] {
+  border: 1px;
+  background-color: var(--Branco);
+  border-bottom-right-radius: 5px;
+  cursor: pointer;
 }
