--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,13 @@ body {
 .livechat {
   background-color: var(--Branco);
   position: absolute;
-  right: 2em;
-  bottom: 2em;
+  right: 3em;
+  bottom: 7.5em;
   width: 75%;
   max-width: 400px;
   border-radius: 5px;
   box-shadow: 14px 14px 38px rgba( 0, 0, 0, 0.08);
-  
+  clip-path: circle(0% at 100% 100%);
 
 }
 
@@ -59,8 +59,8 @@ body {
 
 .container .container-bubble {
   background-color: var(--Azul-TB);
-  width: 4em;
-  height: 4em;
+  width: 48px;
+  height: 48px;
   position: absolute;
   bottom: 2em;
   right: 2em;
@@ -68,7 +68,7 @@ body {
 }
 
 .container-bubble .bubble {  
-  width: 4em;
+  width: 100%;
   cursor: pointer;
 }
 
@@ -107,4 +107,17 @@ h4 {
   background-color: var(--Branco);
   border-bottom-right-radius: 5px;
   cursor: pointer;
+}
+
+.animate-chat {
+  animation: grow-circle .3s forwards ease-out;
+}
+
+@keyframes grow-circle {
+  from {
+    clip-path: circle(0% at 100% 100%);
+  }
+  to {
+    clip-path: circle(100% at 50% 50%);
+  }
 }
