--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@
   --background-color: rgb(235, 235, 235);
 }
 
-html, body {
+html,
+body {
   font-family: 'Nunito', sans-serif;
 }
 
@@ -29,9 +30,8 @@ body {
   width: 75%;
   max-width: 400px;
   border-radius: 5px;
-  box-shadow: 14px 14px 38px rgba( 0, 0, 0, 0.08);
+  box-shadow: 14px 14px 38px rgba(0, 0, 0, 0.08);
   clip-path: circle(0% at 100% 100%);
-
 }
 
 .livechat .header {
@@ -39,7 +39,7 @@ body {
   padding: 0.6em;
   display: flex;
   color: var(--Branco);
-  border-top-left-radius:  5px;
+  border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 40%);
 }
@@ -67,7 +67,7 @@ body {
   border-radius: 50%;
 }
 
-.container-bubble .bubble {  
+.container-bubble .bubble {
   width: 100%;
   cursor: pointer;
 }
@@ -87,22 +87,21 @@ h4 {
   overflow-y: scroll;
 }
 
-
 .send-container {
   display: grid;
   grid-template-columns: 80% auto;
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%);
-  margin-top: 1em;  
+  margin-top: 1em;
   height: 57px;
 }
 
-.send-container input[type="text"] {
+.send-container input[type='text'] {
   padding: 1em;
   border: 1px;
-  border-bottom-left-radius:  5px;
+  border-bottom-left-radius: 5px;
 }
 
-.send-container input[type="submit"] {
+.send-container input[type='submit'] {
   border: 1px;
   background-color: var(--Branco);
   border-bottom-right-radius: 5px;
@@ -110,7 +109,7 @@ h4 {
 }
 
 .animate-chat {
-  animation: grow-circle .3s forwards ease-out;
+  animation: grow-circle 0.3s forwards ease-out;
 }
 
 @keyframes grow-circle {
