--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ h4 {
   overflow-y: scroll;
 }
 
+.mensagem {
+  width: 286px;
+}
+
 .send-container {
   display: grid;
   grid-template-columns: 80% auto;
