--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,10 @@ h4 {
   overflow-y: scroll;
   background-color: var(--background-color);
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 30%);
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.6);  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .mensagem-bot {
@@ -109,9 +112,40 @@ h4 {
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 10%);
   border-radius: 10px;  
   border-bottom-left-radius: 0px;
+  margin: 2px 0px;
 }
 
 .mensagem {
+  padding: 8px 15px;
+  border: 1px;
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;  
+}
+
+.hora-bot {
+  margin: 4px 0px;
+  margin-right: 260px;
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.mensagem-person {
+  width: 50px;
+  background-color: var(--Branco);
+  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 10%);
+  border-radius: 10px;  
+  border-bottom-right-radius: 0px;
+  background-color: var(--Azul-TB);
+  color: var(--Branco);
+}
+
+.hora-person {
+  margin: 4px 0px;
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.mensagem-p {
   padding: 8px 15px;
   border: 1px;
   border-radius: 10px;
