Mudando título e acrescendando margin no botão enviar

--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ text-align: center;
   width: 20.8px;
   height: 21.8px;
   margin-top: 5px;
+  margin-left: 2px;
 }
 
 .send-container .enviar-hide {
