--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
   background-color: var(--Branco);
   position: absolute;
   right: 3em;
-  bottom: 8.5em;
+  bottom: 8.9em;
   width: 75%;
   max-width: 400px;
   border-radius: 5px;
@@ -37,7 +37,7 @@ body {
 
 .livechat .header {
   background-color: var(--Azul-TB);
-  padding: 0.6em;
+  padding: 0.45em;
   display: flex;
   color: var(--Branco);
   border-top-left-radius: 5px;
@@ -99,7 +99,7 @@ h4 {
 
 .content .chat {
   padding: 16px 30px 10px 50px;
-  height: 400px;
+  height: 410px;
   overflow-y: scroll;
   background-color: var(--background-color);
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 30%);
@@ -183,6 +183,7 @@ h4 {
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%);
   height: 57px;
   background-color: #fff;
+  border-radius: 5px;
 }
 
 .send-container input[type='text'] {
