Resolvendo border-radius da mensagem-bot

--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,7 @@ h4 {
   width: 286px;
   background-color: var(--Branco);
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 10%);
-  border-radius: 10px;
-  border-bottom-left-radius: 0px;
+  border-radius: 0px 10px 10px 0;
   margin: 4px 0px;
 }
 
