--- a/css/style.css
+++ b/css/style.css
@@ -168,12 +168,15 @@ h4 {
 }
 
 .mensagem-person {
-  width: 50px;
+  width: 47px;
+  height: 40px;
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 10%);
-  border-radius: 10px;
-  border-bottom-right-radius: 0px;
+  border-radius: 13px 13px 2px 13px;
   background-color: var(--Azul-TB);
   color: var(--Branco);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hora-person {
@@ -185,7 +188,6 @@ h4 {
 }
 
 .mensagem-p {
-  padding: 8px 15px;
   border: 1px;
   border-radius: 10px;
   border-bottom-left-radius: 0px;
