--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ h4 {
   border-bottom-left-radius: 0px;
 }
 
+.mensagem span{
+  color: blue;
+}
+
 .mensagem-list p {
   text-align: center;
 }
