--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 :root {
   --Azul-TB: #3f7de8;
   --Branco: #fff;
-  --background-color: rgb(235, 235, 235);
+  --background-color: rgb(249, 249, 245);
 }
 
 html,
@@ -22,6 +22,7 @@ body {
   background-color: var(--background-color);
 }
 
+
 .livechat {
   background-color: var(--Branco);
   position: absolute;
@@ -30,7 +31,7 @@ body {
   width: 75%;
   max-width: 400px;
   border-radius: 5px;
-  box-shadow: 14px 14px 38px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%);
   clip-path: circle(0% at 100% 100%);
   height: 500px;
 }
@@ -102,7 +103,7 @@ h4 {
   height: 410px;
   overflow-y: scroll;
   background-color: var(--background-color);
-  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 30%);
+  box-shadow: inset 0px -4px 8px rgb(0 0 0 / 10%);
   color: rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
@@ -201,7 +202,7 @@ h4 {
 .send-container {
   display: grid;
   grid-template-columns: 89% auto;
-  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%);
+  box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%),
   height: 57px;
   background-color: #fff;
   border-radius: 5px;
