--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ body {
   max-width: 400px;
   border-radius: 5px;
   box-shadow: 0 -1px 12px 0 rgb(0 0 0 / 20%);
-  clip-path: circle(0% at 100% 100%);
   height: 500px;
+  display: none;
 }
 
 .livechat .header {
@@ -58,22 +58,37 @@ body {
   border-radius: 100%;
 }
 
-.container .container-bubble {
+.bt {
   background-color: var(--Azul-TB);
   width: 48px;
   height: 48px;
   position: absolute;
-  bottom: 3.3em;
-  right: 3em;
+  bottom: 52.8px;
+  right: 48px;
   border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
+  cursor: pointer;
 }
 
-.container-bubble .bubble {
-  width: 100%;
-  cursor: pointer;
+.container-bubble p {
+  color: #fff;
+  font-weight: 500;
+  font-size: 22px;
+  user-select: none;
+}
+
+.sumir-balao {
+  display: none;
+}
+
+.bt-pai {
+  display: none;
+}
+
+.esconde-bt {
+  display: none;
 }
 
 h4 {
@@ -279,29 +294,37 @@ select:focus {
   display: none;
 }
 
-.animate-chat {
-  animation: grow-circle 0.3s forwards ease-out;
+
+.active-chat {
+  animation:  grow-chat 0.8s cubic-bezier(0.200, 0.40, 0.4, 0.9) both;
+  display: block;
 }
 
-@keyframes grow-circle {
-  from {
-    clip-path: circle(0% at 100% 100%);
+.desactive-chat {
+  animation:  contract-chat 0.8s cubic-bezier(0.200, 0.40, 0.4, 0.9) both;
+  display: block;
+}
+
+@keyframes grow-chat {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
   }
-  to {
-    clip-path: circle(100% at 50% 50%);
+
+  100% {
+    transform: translateY(-40px);
+    opacity: 1;    
   }
 }
 
-.container-bubble p {
-  color: #fff;
-  font-weight: 500;
-  font-size: 22px;
-  user-select: none;
-}
-.container-bubble .chat-fechado {
-  display: none;
-}
+@keyframes contract-chat {
+  0% {
+    transform: translateY(-40px);
+    opacity: 1;
+  }
 
-.sumir-balao {
-  display: none;
+  100% {
+    transform: translateY(30px);
+    opacity: 0;    
+  }
 }
